refactor: use Arrays.asList in all ArrayBuilderConsumer branches (#261)
Co-Authored-By: Andreas Igel <andreas.igel@computacenter.com>