@@ -132,6 +132,7 @@ public class ArrayBuilderConsumerGenerator implements MethodGenerator {
 
     BuilderMethodDto methodDto = createBuilderMethod(fieldName, returnBuilderType, context);
     methodDto.addParameter(parameter);
+    methodDto.getMethodCodeDto().addCodeBlockImport(java.util.Arrays.class);
     if (elementType instanceof TypeNamePrimitive) {
       methodDto.setCode(
           """
@@ -146,22 +147,21 @@ public class ArrayBuilderConsumerGenerator implements MethodGenerator {
               ArrayUtils.toPrimitive(builder.build().toArray(new $elementType:B[0])));
           return this;
           """);
-      methodDto.getMethodCodeDto().addCodeBlockImport(java.util.Arrays.class);
       methodDto.getMethodCodeDto().addCodeBlockImport(org.apache.commons.lang3.ArrayUtils.class);
     } else {
       methodDto.setCode(
           """
-          $helperType:T builder = this.$fieldName:N.isSet()
-            ? new $helperType:T(java.util.List.of(this.$fieldName:N.value()))
-            : new $helperType:T();
+          $helperType:T builder;
+          if (this.$fieldName:N.isSet()) {
+            builder = new $helperType:T(Arrays.asList(this.$fieldName:N.value()));
+          } else {
+            builder = new $helperType:T(Arrays.asList());
+          }
           $dtoMethodParam:N.accept(builder);
           this.$fieldName:N = $builderFieldWrapper:T.changedValue(builder.build().toArray(new $elementType:T[0]));
           return this;
           """);
     }
-
-    // Add code block import for java.util.List.of
-    methodDto.getMethodCodeDto().addCodeBlockImport(List.class);
 
     methodDto.addArgument("fieldName", fieldNameInBuilder);
     methodDto.addArgument("dtoMethodParam", parameter.getParameterName());
